added user schema

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "bin": {
   },
   "scripts": {
-    "start" : "node server.js"
+    "start" : "node server.js",
+    "test" : "mocha tests"
   },
   "repository": {
     "type": "git",
