possible fix to crashing server

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "keywords": [
   ],
   "dependencies" : {
-    "mysql"     :   "latest",
+    "mysql"     :   "mysql@2.0.0-alpha7",
     "express"   :   "3.x",
     "jade"      :    "latest",
     "gm"        :    "latest"
